# ai-agents

./: LICENSE  README.md
microservice-dev-pipeline/: CLAUDE.md  README.md  business_needs.txt
microservice-dev-pipeline/sample-app/services/analytics/: Dockerfile  README.md  pyproject.toml
microservice-dev-pipeline/sample-app/services/analytics/app/: config.py  dependencies.py  main.py
microservice-dev-pipeline/sample-app/services/analytics/app/adapters/: in_memory_broker.py  in_memory_repository.py  postgres_repository.py  rabbitmq_broker.py
microservice-dev-pipeline/sample-app/services/analytics/app/api/: stats.py
microservice-dev-pipeline/sample-app/services/analytics/app/exceptions/: analytics_exceptions.py
microservice-dev-pipeline/sample-app/services/analytics/app/models/: url_access_stats.py
microservice-dev-pipeline/sample-app/services/analytics/app/ports/: message_broker.py  repository.py
microservice-dev-pipeline/sample-app/services/analytics/app/services/: analytics_service.py
microservice-dev-pipeline/sample-app/services/analytics/tests/integration/: test_postgres_repository.py
microservice-dev-pipeline/sample-app/services/analytics/tests/unit/: test_analytics_service.py  test_app_startup.py
mockup-factory/: 0.prompt - product brief.txt  1.prompt - IDN description.txt  2.prompt - Use Case guidelines.txt  3.prompt - Mockup Description Guidelines.txt  4.prompt - Mockup Generation Guidelines.txt  README.md
process_file_with_ai/: README.md  config.json  detailed_design_msg_server.adoc  process_file_with_ai.py  readme.txt  (+1 more)
(+93 files in other folders)
